# cmake-by-example

./: README.md
01-hello-world/: CMakeLists.txt  README.md
01-hello-world/src/: main.cpp
02-math-functions/: CMakeLists.txt  README.md
02-math-functions/include/: mathfunctions.h  parity.h
02-math-functions/src/: main.cpp  mathfunctions.cpp  parity.cpp
03-filesystem-search/: CMakeLists.txt  README.md
03-filesystem-search/src/: main.cpp
